--- a/_data/projects.json
+++ b/_data/projects.json
@@ -162,30 +162,9 @@
         "name": "BlackHat London 2019",
         "milestones": [
             {
-                "milestone_date": "2019-11-04",
-                "description": "ufoo form sent to all European Chapter leaders on the wiki.",
-                "owner": "Lisa",
-                "project_name": "BlackHat London 2019",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-11-11",
-                "description": "hip and order all SWAG for booth needs to arrive at one address if prior to Nov 30th and another address           after Nov 3oth.",
-                "owner": "Mike & Lisa",
-                "project_name": "BlackHat London 2019",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-11-15",
-                "description": "valuate if enough volunteers to move forward with booth.",
-                "owner": "No Owner",
-                "project_name": "BlackHat London 2019",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-11-15",
-                "description": "egister volunteers, and local onsite contact and post the schedule",
-                "owner": "Lisa",
+                "milestone_date": "2019-11-20",
+                "description": "rder Stickers with Giant",
+                "owner": "Mike",
                 "project_name": "BlackHat London 2019",
                 "status": "on-time"
             }
@@ -447,14 +426,14 @@
                 "description": "Project Nomination Opens",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2019-12-16",
                 "description": "Email solicitation sent to Leaders list",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2019-12-20",
@@ -578,13 +557,6 @@
         "name": "Global AppSec - Dublin 2020",
         "milestones": [
             {
-                "milestone_date": "2019-10-31",
-                "description": "Stub website with Sponsor pricing/info online.",
-                "owner": "Harold",
-                "project_name": "Global AppSec - Dublin 2020",
-                "status": "overdue"
-            },
-            {
                 "milestone_date": "2019-11-15",
                 "description": "Launch Call for Program Team Members",
                 "owner": "Emily",
@@ -695,6 +667,13 @@
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
                 "status": "future"
+            },
+            {
+                "milestone_date": "2020-05-15",
+                "description": "Volunteers finalized and communication initiated",
+                "owner": "Emily",
+                "project_name": "Global AppSec - Dublin 2020",
+                "status": "future"
             }
         ],
         "description": "June 15-19, 2020    Training Days: June 15-17, 2020  Conference Days: June 18-19, 2020Welcome to Global AppSec Dublin 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
@@ -764,13 +743,6 @@
     {
         "name": "Global AppSec - San Francisco",
         "milestones": [
-            {
-                "milestone_date": "2019-10-31",
-                "description": "Stub website with Sponsor pricing/info online.",
-                "owner": "Harold",
-                "project_name": "Global AppSec - San Francisco",
-                "status": "overdue"
-            },
             {
                 "milestone_date": "2019-11-10",
                 "description": "Populate Project Page with required content",
@@ -865,6 +837,13 @@
             {
                 "milestone_date": "2020-10-01",
                 "description": "F&B Order Complete",
+                "owner": "Emily",
+                "project_name": "Global AppSec - San Francisco",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-09-15",
+                "description": "Volunteers finalized and communication initiated",
                 "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco",
                 "status": "future"
